wb is zero-width so takes ? or !
git-svn-id: http://svn.pugscode.org/pugs@23906 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1337,9 +1337,9 @@ These tokens are considered declarative, but may force backtracking behavior.
 
 A C<«> or C<<< << >>> token indicates a left word boundary.  A C<»> or
 C<<< >> >>> token indicates a right word boundary.  (As separate tokens,
-these need not be balanced.)  Perl 5's C<\b> is replaced by a C<< <.wb> >>
+these need not be balanced.)  Perl 5's C<\b> is replaced by a C<< <?wb> >>
 "word boundary" assertion, while C<\B> becomes C<< <!wb> >>.  (None of
-these are dependent on the definition of C<< <ws> >>, but only on the C<\w>
+these are dependent on the definition of C<< <.ws> >>, but only on the C<\w>
 definition of "word" characters.)
 
 =back
