--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -662,8 +662,18 @@ for side-effects:
         \s+  { print "but does contain whitespace\n" }
      /
 
+An B<explicit> reduce from a regex closure binds the I<result object>
+for this match:
+
+        / (\d) { reduce $0.sqrt } Remainder /;
+
+This has the effect of capturing the square root of the numified string,
+instead of the string.  The C<Remainder> part is matched but is not returned
+unless the first reduce is later overridden by another reduce.
+
+These closures are invoked with a topic (C<$_>) of the current match state.
 Within a closure, the instantaneous position within the search is
-denoted by the special variable C<$¢>.  As with all string positions,
+denoted by the C<.pos> method on that object.  As with all string positions,
 you must not treat it as a number unless you are very careful about
 which units you are dealing with.
 
@@ -1121,18 +1131,6 @@ into the pattern at that point as a subrule:
 
 The closure is guaranteed to be run at the canonical time; it declares
 a sequence point, and is considered to be procedural.
-
-As with an ordinary embedded closure, an B<explicit> return from a
-regex closure binds the I<result object> for this match, ignores the
-rest of the current regex, and reports success:
-
-        / (\d) <{ return $0.sqrt }> NotReached /;
-
-This has the effect of capturing the square root of the numified string,
-instead of the string.  The C<NotReached> part is not reached.
-
-These closures are invoked as anonymous methods on the C<Match> object.
-See L</Match objects> below for more about result objects.
 
 =item *
 
