grammaro from Coke++
git-svn-id: http://svn.pugscode.org/pugs@23910 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -106,7 +106,7 @@ Quotes create a quantifiable atom, so while
 
     moose*
 
-quantifies only the 'e' and match "mooseee", saying
+quantifies only the 'e' and matches "mooseee", saying
 
     'moose'*
 
